[gd_scene load_steps=32 format=2]

[ext_resource path="res://Grafik/Assets/Kinderzimmer/Frames/frage.png" type="Texture" id=1]
[ext_resource path="res://Szenen/GUI/BtnMainMenuBg.tscn" type="PackedScene" id=2]
[ext_resource path="res://Szenen/OG/MyButton.gd" type="Script" id=4]
[ext_resource path="res://Szenen/Levels/KinderAufg.gd" type="Script" id=5]
[ext_resource path="res://Grafik/Assets/Kinderzimmer/child_r.png" type="Texture" id=6]
[ext_resource path="res://Szenen/GUI/MainMenuBtn.gd" type="Script" id=7]
[ext_resource path="res://Szenen/OG/JumpToPage.tscn" type="PackedScene" id=9]
[ext_resource path="res://Szenen/OG/JumpToRoof.gd" type="Script" id=10]
[ext_resource path="res://Grafik/Assets/GUI/tips5.png" type="Texture" id=11]
[ext_resource path="res://Grafik/Assets/GUI/newGift.png" type="Texture" id=12]
[ext_resource path="res://Grafik/Assets/GUI/newGiftAmpere.png" type="Texture" id=13]
[ext_resource path="res://Grafik/Assets/GUI/gifteffect.png" type="Texture" id=14]
[ext_resource path="res://Szenen/OG/Reward.gd" type="Script" id=15]
[ext_resource path="res://Grafik/Assets/GUI/bgStars.png" type="Texture" id=16]
[ext_resource path="res://Grafik/Assets/GUI/particle.png" type="Texture" id=17]
[ext_resource path="res://Szenen/OG/KinderAufgOriginal.tres" type="Animation" id=18]

[sub_resource type="DynamicFontData" id=18]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque_open.otf"

[sub_resource type="DynamicFont" id=19]
size = 32
font_data = SubResource( 18 )

[sub_resource type="DynamicFontData" id=20]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=21]
size = 26
font_data = SubResource( 20 )

[sub_resource type="DynamicFontData" id=24]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=25]
size = 32
font_data = SubResource( 24 )

[sub_resource type="DynamicFontData" id=22]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=23]
size = 32
font_data = SubResource( 22 )

[sub_resource type="DynamicFontData" id=26]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = SubResource( 26 )

[sub_resource type="DynamicFontData" id=27]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=28]
size = 36
font_data = SubResource( 27 )

[sub_resource type="Animation" id=9]
resource_name = "newGift (copy)"
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath("CPUParticles2D2:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.8, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 1.8, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.9, 1.7, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0, 1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 1.4, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.270588 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 400.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite2:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1.6, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 1.4, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Sprite3:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../Sprite3:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ), Vector2( 0.1, 0.1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("star1:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.3, 0.7, 1.6, 2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3.57628e-06, 3.57628e-06 ), Vector2( -56, 64 ), Vector2( -56, 64 ), Vector2( -78.316, 40 ), Vector2( 0, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("star1:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.3, 0.7, 1.6, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.00596e-05, 1.00596e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("star2:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.3, 0.7, 1.6, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3.57628e-06, 3.57628e-06 ), Vector2( 0, 64 ), Vector2( 0, 64 ), Vector2( 0, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("star2:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.3, 0.7, 1.6, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.00596e-05, 1.00596e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("star3:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0.3, 0.7, 1.6, 1.9, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3.57628e-06, 3.57628e-06 ), Vector2( 56, 64 ), Vector2( 56, 64 ), Vector2( 78.316, 40 ), Vector2( 0, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("star3:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0.3, 0.7, 1.6, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.00596e-05, 1.00596e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Label2:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 0.7, 2.1, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Label2:percent_visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 0.8, 1.2, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0, 1.0, 0.0 ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("star1:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0, 0.4, 1.9, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("star2:modulate")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 0.5, 1.9, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("star3:modulate")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 0.7, 1.9, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFontData" id=29]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque_open.otf"

[sub_resource type="DynamicFont" id=30]
size = 26
font_data = SubResource( 29 )

[node name="KinderAufg" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 1.33333, 1.33333 )
texture = ExtResource( 6 )

[node name="Frame" type="Sprite" parent="."]
position = Vector2( 640, 331.813 )
texture = ExtResource( 1 )

[node name="Titel" type="Label" parent="Frame"]
margin_left = -418.0
margin_top = -295.0
margin_right = 417.0
margin_bottom = -254.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "Aufgabe X"
align = 1
valign = 1

[node name="Description" type="Label" parent="Frame"]
margin_left = -410.0
margin_top = -247.081
margin_right = 411.0
margin_bottom = -135.081
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 21 )
text = " LKWNEFLNWELFNWELFKNWELKFN LWEKNFLEWKNFLEW KNFLEWNFLEWKFNLEWKNFE WLKNFWELK NFEWL NFEWLE KNFEWKL NFLKEWNFFFE LKWNEFLNWELFNWELFKNWELKFN LWEKNFLEWKNFLEW KNFLEWNFLEWKFNLEWKNFE WLKNFWELK NFEWL NFEWLE KNFEWKL NFLKEWNFFFE LKWNEFLNWELFNWELFKNWELKFN LWEKNFLEWKNFLEW KNFLEWNFLEWKFNLEWKNFE WLKNFWELK NFEWL NFEWLE KNFEWKL NFLKEWNFFFE"
autowrap = true
clip_text = true

[node name="tasks" type="Node2D" parent="."]

[node name="Button2" type="Node2D" parent="."]
position = Vector2( 155.48, 784.798 )
script = ExtResource( 7 )

[node name="ButtonZurueck" parent="Button2" instance=ExtResource( 2 )]
position = Vector2( 4.52002, -94.798 )

[node name="Label" type="Label" parent="Button2"]
margin_left = -147.0
margin_top = -118.0
margin_right = 157.0
margin_bottom = -74.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = SubResource( 25 )
text = "zurück"
align = 1
valign = 1

[node name="Button" type="Node2D" parent="."]
position = Vector2( 640, 781 )
script = ExtResource( 4 )

[node name="ButtonMainMenuBg" parent="Button" instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="Button"]
margin_left = -152.0
margin_top = -114.0
margin_right = 152.0
margin_bottom = -69.0
rect_rotation = -0.157253
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = SubResource( 23 )
text = "überprüfen"
align = 1
valign = 1

[node name="JumpToPage" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 1126.3, 106.335 )

[node name="JumpToRoof" type="Node2D" parent="."]
visible = false
script = ExtResource( 10 )

[node name="TextureRect" type="TextureRect" parent="JumpToRoof"]
margin_left = 1078.0
margin_top = 308.0
margin_right = 1188.0
margin_bottom = 480.0
mouse_default_cursor_shape = 2
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="JumpToRoof/TextureRect"]
margin_left = 23.0
margin_top = 104.0
margin_right = 98.0
margin_bottom = 149.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Probier es aus!"
align = 1
autowrap = true

[node name="Reward" type="Node2D" parent="."]
z_index = 3
script = ExtResource( 15 )

[node name="Sprite3" type="Sprite" parent="Reward"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 634.077, 339.847 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 16 )

[node name="Gift" type="Node2D" parent="Reward"]
position = Vector2( 634.077, 339.847 )

[node name="Sprite2" type="Sprite" parent="Reward/Gift"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 14 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Reward/Gift"]
scale = Vector2( 2, 2 )
emitting = false
amount = 55
lifetime = 2.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 91.01
orbit_velocity = 0.2
linear_accel = -90.13

[node name="CPUParticles2D" type="CPUParticles2D" parent="Reward/Gift"]
scale = Vector2( 2, 2 )
emitting = false
amount = 55
lifetime = 2.0
one_shot = true
preprocess = 0.8
explosiveness = 0.72
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 84.27
initial_velocity_random = 0.21
linear_accel = -56.16

[node name="Sprite" type="Sprite" parent="Reward/Gift"]
visible = false
modulate = Color( 1, 1, 1, 0.270588 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="Reward/Gift/Sprite"]
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="Reward/Gift"]
margin_left = -112.0
margin_top = -89.0
margin_right = 115.0
margin_bottom = -12.0
custom_fonts/font = SubResource( 28 )
text = "Aufgabe abgeschlossen!"
align = 1
autowrap = true
percent_visible = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Reward/Gift"]
anims/KinderAufgOriginal = ExtResource( 18 )
anims/newGift = ExtResource( 18 )
"anims/newGift (copy)" = SubResource( 9 )

[node name="star1" type="Sprite" parent="Reward/Gift"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -3.57628e-06, 3.57628e-06 )
scale = Vector2( 1.00596e-05, 1.00596e-05 )
texture = ExtResource( 17 )

[node name="star2" type="Sprite" parent="Reward/Gift"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -3.57628e-06, 3.57628e-06 )
scale = Vector2( 1.00596e-05, 1.00596e-05 )
texture = ExtResource( 17 )

[node name="star3" type="Sprite" parent="Reward/Gift"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -3.57628e-06, 3.57628e-06 )
scale = Vector2( 1.00596e-05, 1.00596e-05 )
texture = ExtResource( 17 )

[node name="Label2" type="Label" parent="Reward/Gift"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -127.0
margin_top = 2.0
margin_right = 125.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.764706, 0.756863, 0.756863, 1 )
custom_fonts/font = SubResource( 30 )
text = "1 Fehler"
align = 1
autowrap = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[connection signal="clicked" from="Button2/ButtonZurueck" to="." method="_on_ButtonZurueck_clicked"]
[connection signal="clicked" from="Button/ButtonMainMenuBg" to="." method="_on_ButtonMainMenuBg_clicked"]
[connection signal="gui_input" from="JumpToRoof/TextureRect" to="JumpToRoof" method="_on_TextureRect_gui_input"]
